objects/Community_User_Setting__c.object
<CustomObject>
    <description>Custom settings object for community (In lieu of adding fields on contact/user). This contains lookups to both user and contact as well as field sets to allow for dynamically adding new fields on the Community Settings lwc page.</description>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Community Users Settings</relationshipLabel>
        <relationshipName>Community_Users_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DBA_Name__c</fullName>
        <description>FF to the primary (direct) account for the contact. The original is Account.Name</description>
        <formula>Contact__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>FF to the primary (direct) account for the contact. The original is Account.Name</inlineHelpText>
        <label>DBA Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Area_Chart__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>@TODO</inlineHelpText>
        <label>Display Area Chart</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Area_Metrics__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>@TODO</inlineHelpText>
        <label>Display Area Metrics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Average_Chart__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>@TODO</inlineHelpText>
        <label>Display Average Chart</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Data_Metrics__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>@TODO</inlineHelpText>
        <label>Display Data Metrics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Data_Table__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>@TOOD</inlineHelpText>
        <label>Display Data Table</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Estimated_Revenue__c</fullName>
        <defaultValue>true</defaultValue>
        <description>@TODO Desc</description>
        <inlineHelpText>@TODO Help</inlineHelpText>
        <label>Display Estimated Revenue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Location_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked indicates that an address will show as opposed to the location name. Unchecked indicates that only the address will show (on the community home page / yesterday share component)
https://accel-entertainment.monday.com/boards/286658657/pulses/294459025  message-toggle-inactive = [Location Name] message-toggle-active [Location Address]</description>
        <inlineHelpText>Checked indicates that an address will show as opposed to the location name. Unchecked indicates that the location name will show.</inlineHelpText>
        <label>Display Location Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Location_Growth_Chart__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>@TODO</inlineHelpText>
        <label>Display Location Growth Chart</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Location_Growth_Datatable__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>@TODO</inlineHelpText>
        <label>Display Location Growth Datatable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Machine_Chart__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Checked indicates the Revenue by Machine chart will be visible on the performance page. Unchecked indicates this chart will be hidden.</inlineHelpText>
        <label>Display Machine Chart</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Machine_Table__c</fullName>
        <defaultValue>true</defaultValue>
        <description>@todo desc</description>
        <inlineHelpText>@Todo help</inlineHelpText>
        <label>Display Machine Table</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Machine_Tabs__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Checked indicates the tab of Machines with their pictures will be displayed on the performance page. Unchecked indicates these tabs will be hidden.</inlineHelpText>
        <label>Display Machine Tabs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Map__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>@TODO</inlineHelpText>
        <label>Display Map</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Ranking_Table__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>@TODO</inlineHelpText>
        <label>Display Ranking Table</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Revenue_Chart__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>@TODO</inlineHelpText>
        <label>Display Revenue Chart</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Revenue_MTD_Machine_Perf__c</fullName>
        <defaultValue>true</defaultValue>
        <description>@todo desc</description>
        <inlineHelpText>@todo help</inlineHelpText>
        <label>Display Revenue MTD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Revenue_Month_to_Date__c</fullName>
        <defaultValue>true</defaultValue>
        <description>@TODO Desc</description>
        <inlineHelpText>@TODO Help</inlineHelpText>
        <label>Display Revenue Month-to-Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Revenue_YTD_Machine_Perf__c</fullName>
        <defaultValue>true</defaultValue>
        <description>@TODO Add Desc</description>
        <inlineHelpText>@TODO Add Help</inlineHelpText>
        <label>Display Revenue YTD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Revenue_Year_to_Date__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Active indicates that the Revenue Year-To-Date information will display on the Machine Performance Page. Inactive indicates that it will be hidden.</description>
        <inlineHelpText>Active indicates that the Revenue Year-To-Date information will display on the Machine Performance Page. Inactive indicates that it will be hidden.</inlineHelpText>
        <label>Display Revenue Year-to-Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Top_Machine_Info__c</fullName>
        <defaultValue>true</defaultValue>
        <description>@desc</description>
        <inlineHelpText>@help</inlineHelpText>
        <label>Display Top Machine Info</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Trend_Chart__c</fullName>
        <defaultValue>true</defaultValue>
        <description>@TODO Desc</description>
        <inlineHelpText>@TODO Help</inlineHelpText>
        <label>Display Trend Chart</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Week_Chart__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Displays aggregated daily performance data for your accounts for the current and previous fiscal week</description>
        <inlineHelpText>Checked indicates weekly account peformance will display on the home page. Unchecked indicates that it will be hidden.</inlineHelpText>
        <label>Display Week Chart</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Yesterday_Bar_Chart__c</fullName>
        <defaultValue>true</defaultValue>
        <description>@TODO Desc</description>
        <inlineHelpText>@TODO Help</inlineHelpText>
        <label>Display Yesterday Bar Chart</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Yesterday_Location_Share__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Checked indicates that yesterdays location share will display on the home page. Unchecked indicates that it will be hidden.</description>
        <inlineHelpText>Checked indicates that yesterdays location share will display on the home page. Unchecked indicates that it will be hidden.</inlineHelpText>
        <label>Display Yesterday Share &amp; Rank</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Yesterday_Share_Funds_In_Metrics__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Active indicates that yesterday share funds-in information will display on the home page. Inactive indicates that it will be hidden.</description>
        <inlineHelpText>Active indicates that yesterday share funds-in information will display on the home page. Inactive indicates that it will be hidden.</inlineHelpText>
        <label>Display Yesterday Funds In Metrics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location_Type__c</fullName>
        <description>FF To the contacts primary (direct) account filtered location type. The original of this is Accel location type on Account.</description>
        <formula>Contact__r.Account.Filtered_Location_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>FF To the contacts primary (direct) account filtered location type. The original of this is Accel location type on Account.</inlineHelpText>
        <label>Location Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Name__c</fullName>
        <description>Simply a FF that points to User.Profile.Name</description>
        <formula>User__r.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profile Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Community_Users_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Community User Setting</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>DBA_Name__c</columns>
        <columns>Location_Type__c</columns>
        <columns>User__c</columns>
        <columns>Contact__c</columns>
        <columns>Profile_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Community Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Community Users Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>